Minimal XBox music rework

--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -223,7 +223,7 @@
                                     @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('X'))
                                     {
                                         var xid = "X" + item.SongId;
-                                        <li><a href="#" id="@xid" class="play-link"><img src='@Url.Content("~/Content/xbox-logo.png")' alt="Availiable on Xbox Music" width="20" height="20" /> Xbox Music</a></li>
+                                        <li><a href="#" id="@xid" class="play-link"><img src='@Url.Content("~/Content/xbox-logo.png")' alt="Availiable on Groove Music" width="20" height="20" /> Groove</a></li>
                                     }
                                     @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('I'))
                                     {
