--- a/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
+++ b/DanceCalc/m4d/Views/Song/AlbumDetails.cshtml
@@ -24,7 +24,7 @@
 @Html.Partial("_PurchaseLinks",Model.PurchaseLinks)
 @*@foreach (var link in @Model.PurchaseLinks)
 {
-    <button id="@xid" type="button"><img src="@Url.Content("~/Content/xbox-logo.png")" alt="Availiable on Xbox Music" width="20" height="20" /></button>
+    <button id="@xid" type="button"><img src="@Url.Content("~/Content/xbox-logo.png")" alt="Availiable on Groove" width="20" height="20" /></button>
     <a href="@link.Link"></a>
 }*@
 
