--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -160,7 +160,7 @@
     <div class="row col-md-12">
         <input class="text-box single-line" placeholder="leave blank to use title + artist" id="search" type="text" width="75" />
         <button type="button" id="load-all" class="btn btn-small btn-default" role="button">Search All</button>
-        <button type="button" id="load-xbox" class="btn btn-small btn-default" role="button">Xbox</button>
+        <button type="button" id="load-xbox" class="btn btn-small btn-default" role="button">Groove</button>
         <button type="button" id="load-itunes" class="btn btn-small btn-default" role="button">ITunes</button>
         <button type="button" id="load-spotify" class="btn btn-small btn-default" role="button">Spotify</button>
         <button type="button" id="load-amazon" class="btn btn-small btn-default" role="button">Amazon</button>
