--- a/DanceCalc/m4d/Views/Song/Sample.cshtml
+++ b/DanceCalc/m4d/Views/Song/Sample.cshtml
@@ -50,7 +50,7 @@
             Include only song available on:
             <label>
                 <input type="checkbox" name="services" id="serviceX" value="X" checked />
-                XBox
+                Groove
             </label>
             <label>
                 <input type="checkbox" name="services" id="serviceA" value="A" />
