--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -14,10 +14,10 @@
         {
             @Html.ActionLink("Edit", "Edit", new {id = Model.SongId, filter}, new {@class = "btn btn-small btn-default", role = "button"})
             @Html.ActionLink("Delete", "Delete", new {id = Model.SongId, filter}, new {@class = "btn btn-small btn-default", role = "button"})
-            @*@Html.ActionLink("XBox", "MusicServiceSearch", new { id = Model.SongId, type = "X", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @*@Html.ActionLink("Groove", "MusicServiceSearch", new { id = Model.SongId, type = "X", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("ITunes", "MusicServiceSearch", new { id = Model.SongId, type = "I", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Amazon", "MusicServiceSearch", new { id = Model.SongId, type = "A", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
-            @Html.ActionLink("Next XBox", "BatchMusicService", new { filter = filter, type = "X", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
+            @Html.ActionLink("Next Groove", "BatchMusicService", new { filter = filter, type = "X", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
             @Html.ActionLink("Next Itunes", "BatchMusicService", new { filter = filter, type = "I", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })
             @Html.ActionLink("Next Amazon", "BatchMusicService", new { filter = filter, type = "A", count = 1 }, new { @class = "btn btn-small btn-primary", role = "button" })*@
         }
