--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -168,4 +168,5 @@
     <li>@Html.ActionLink("DanceForum", "ScrapeDances", new { id = "danceforums" })</li>
     <li>@Html.ActionLink("DWTS", "ScrapeDances", new { id = "dwts" })</li>
     <li>@Html.ActionLink("WDW", "ScrapeDances", new { id = "WDW" })</li>
+    <li>@Html.ActionLink("***REMOVED***", "ScrapeDances", new { id = "***REMOVED***" })</li>
 </ul>
