Build minimal album ordering cleanup code and back out some diagostic code.

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -46,6 +46,7 @@
     <li>@Html.ActionLink("Update Spotify Regions", "SpotifyRegions", "Admin", new { count = 500 }, null)</li>
     <li>@Html.ActionLink("Region Stats", "RegionStats", "Admin")</li>
     <li>@Html.ActionLink("Compress Regions", "CompressRegions", "Admin")</li>
+    <li>@Html.ActionLink("Cleanup Albums", "CleanAlbums", "Admin")</li>
 </ul>
 
 <h3>Tracing (Current Level = @ViewBag.TraceLevel)</h3>
