Enable administrator editing of user info.  Most importatly user name including propagating that through all of the song properties, this will allow us to change the externally visible usernames for our pseudo users in case we want to seed the space wth some or all of these guys without so obivously revealing the sources.  Next step:  batch mode for this

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -112,6 +112,7 @@
             @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
             @Html.ActionLink("List Songs", "FilterUser", "Song", new { user = item.UserName }, null),
             @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
             @*
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
