--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -117,9 +117,11 @@
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/addtags?tags=%2BWedding:Other") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/wedding/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs that match competion tempo ranges.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/american-rhythm") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-category/") @SmartLink.Posts("https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Tag songs to create your own ways of making song lists</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/register") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://www.music4dance.net/blog/tag-editing-open-beta-is-here/")</dd>
     </dl>
     <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
-    <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
+    <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">leaving feedback</a> so that we can include your ideas about how to organize dance styles in the future.</p>
     <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
 </div>
 
@@ -162,7 +164,9 @@
     <h4 class="blog">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</h4>
     <p class="neutral">What if you are particularly in love with one dance style or are just learning to dance one particular style and are looking for an inspiring first dance song in that style? <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">[Read more]</a></p>
     <h4 class="blog">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</h4>
-    <p class="neutral">The quick answer to this question is yes, definitely!
-
-First, many of the songs in our catalog have been tagged with a tempo, so it is easy... <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">[Read more]</a></p>
+    <p class="neutral">The quick answer to this question is yes, definitely!First, many of the songs in our catalog have been tagged with a tempo, so it is easy... <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">[Read more]</a></p>
+    <h4 class="blog">What if I want to build a list of songs that are tagged as either Bolero or Rumba?</h4>
+    <p class="neutral">There are a bunch of different reasons that you might want to build lists of songs that are more sophisticated than just the songs that can be danced to a specific style... <a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">[Read more]</a></p>
+    <h4 class="blog">Let's edit some tags</h4>
+    <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/tag-editing-open-beta-is-here/ ‎">[Read more]</a></p>
 </div>
