Quick bug fix to correct links on updated home page

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -167,6 +167,6 @@
     <p class="neutral">The quick answer to this question is yes, definitely!First, many of the songs in our catalog have been tagged with a tempo, so it is easy... <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">[Read more]</a></p>
     <h4 class="blog">What if I want to build a list of songs that are tagged as either Bolero or Rumba?</h4>
     <p class="neutral">There are a bunch of different reasons that you might want to build lists of songs that are more sophisticated than just the songs that can be danced to a specific style... <a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">[Read more]</a></p>
-    <h4 class="blog">Let's edit some tags</h4>
-    <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/tag-editing-open-beta-is-here/ ‎">[Read more]</a></p>
+    <h4 class="blog">Let's tag some songs</h4>
+    <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/lets-tag-some-songs/">[Read more]</a></p>
 </div>
