--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -147,7 +147,16 @@
         <input type="submit" name="UploadTempi"  value="Upload" />
     }
     <hr/>
-    
+
+    <h3>Update User Names</h3>
+    using (Html.BeginForm("UpdateUsernames", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken();
+        <input type="file" name="FileUpload"/>
+        <input type="checkbox" name="makepublic" id="makepublic" value="true" checked/> <text>Make Public</text>
+        <input type="submit" name="submit" id="UpdateUsernames" value="Submit" />
+    }
+
     <h3>Reload the Database</h3>
     using (Html.BeginForm("ReloadDatabase", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
