Add in the ability to create a pseudo-user with a different email alias than username + fix a reporting bug on the batch user rename + add custom info to the user details page.

--- a/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
@@ -114,6 +114,47 @@
             @Html.DisplayFor(model => model.AccessFailedCount)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Region)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RegionName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Privacy)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PrivacyDescription)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CanContact)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ContactDescription)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ServicePreference)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ServicePreferenceDescription)
+        </dd>
+
+
     </dl>
 </div>
 <p>
