Uncomment trackname field in song edit

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -181,7 +181,7 @@
             <tr>
                 <td><a data-bind="attr: {href: SongLink.Link}" class="btn" role="button"><img width="30" height="30" data-bind="attr: {src: serviceLogo}" /></a></td>
                 <td><a href="#" class="btn btn-default" role="button" data-bind="click: $root.song.chooseTrack"><img width="30" height="30" data-bind="attr: {src: ImageUrl}" /></a></td>
-                @*<td data-bind="text: Name"></td>*@<td>&nbsp;</td>
+                <td data-bind="text: Name"></td>
                 <td data-bind="text: Album"></td>
                 <td data-bind="text: Artist"></td>
                 <td data-bind="text: TrackNumber"></td>
