--- a/DanceCalc/m4d/Views/Account/Register.cshtml
+++ b/DanceCalc/m4d/Views/Account/Register.cshtml
@@ -29,7 +29,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m =>m.ConfirmEmail, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.ConfirmEmail, new {@class = "form-control" })
+                    </div>
+
+                </div>
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Password">Password<a href="#identifier">*</a></label>
+                    @*@Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })*@
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                     </div>
@@ -47,6 +55,8 @@
                 </div>
             }
         </section>
+        <p id="identifier">*Password must be at least 6 characters long and contain each of the following:</p>
+        <ul><li>A numerical digit (0-9)</li><li>A lowercase character (a-z)</li><li>An uppercase charater (A-Z)</li><li>A special character (!#$..)</li></ul>
     </div>
     <div class="col-md-4">
         <section id="socialLoginForm">
