--- a/DanceCalc/m4d/Views/Dance/Category.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Category.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = @Model.Name;
     ViewBag.Description = "A description of the competition dance category " + @Model.Name + " along with tempo ranges and song lists.";
     var catType = @Model.Name.StartsWith("International") ? DanceCategoryType.International : DanceCategoryType.American;
+    var blogName = "https://www.music4dance.net/blog/tag/" + @Model.Name.ToLowerInvariant().Replace(' ', '-') + "/";
 }
 
 @helper FullRoundName()
@@ -35,9 +36,9 @@
 
 <p>Click on any of the tempo values above (in the MPM, DanceSport, or NDCA columns) to go to a list of songs of that tempo.</p>
 
-<p>
-    Other categories of competition ballroom dancing are @LinkCategory(cats[0]), @LinkCategory(cats[1]) and @LinkCategory(cats[2]).
-</p>
+<p>Other categories of competition ballroom dancing are @LinkCategory(cats[0]), @LinkCategory(cats[1]) and @LinkCategory(cats[2]).</p>
 
 <p><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.
 @SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/")</p>
+
+<p>Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/ballroom">Ballroom</a> in general and <a href="@blogName">@Model.Name</a> more specifically.</p>
