Fix the regression where exact matches were not showing up correctly in the tempo counter.
Also, while I was in this code, I change the default to BPM and removed the 'smart' code to override any song that was associated with a 'waltz' to be 3/4.

--- a/DanceCalc/m4d/Views/Shared/_MeterChooser.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_MeterChooser.cshtml
@@ -1,5 +1,5 @@
 ﻿<button type="button" id="mt" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-    4/4 MPM <span class="caret"></span>
+    BPM <span class="caret"></span>
 </button>
 <ul class="dropdown-menu" role="menu">
     <li><a id="mt1" href="#">BPM</a></li>
