--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -5,33 +5,44 @@
 
 @Html.Partial("_Counter")
 
+@if (User.IsInRole("canEdit"))
+{
+    <hr/>
+    <form id="lookup-by-id" class="form-inline">
+        <div class="form-group">
+            <label for="idString">ID/URL</label>
+            <input type="text" class="form-control" id="idString">
+        </div>
+        <button type="submit" class="btn btn-default">Lookup</button>
+    </form>
+
+    <div data-bind="with: song"><a class="label label-music" data-bind="attr: {href: '/song/edit?id=' + SongId + '&tempo=' + $root.tempo()}">Edit</a> <em data-bind="text:Title"></em> by <strong data-bind="text:Artist"></strong></div>
+    <div data-bind="with: track">
+        <a class="label label-music" data-bind="attr: {href: '/song/create?title=' + Name + '&artist=' + Artist + '&length=' + Duration + '&tempo=' + $root.tempo()+ '&album=' + Album + '&track=' + TrackNumber + '&service=S&purchase=' + TrackId}">Create</a>
+        <em data-bind="text:Name"></em> by <strong data-bind="text:Artist"></strong> on <span data-bind="text:Album"></span> (<span data-bind="text:TrackNumber"></span>)
+    </div>
+}
+
+@*TODONEXT: Figure out why the passthrough of that track info is failing*@
 @section Scripts {
     @{
         string pageScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
-        if (ViewData.ContainsKey("paramNumerator"))
-        {
-            <script>var paramNumerator = @ViewBag.paramNumerator;</script>
-        }
-        if (ViewData.ContainsKey("paramTempo"))
-        {
-            <script>var paramTempo = @ViewBag.paramTempo;</script>
-        }
-        if (ViewData.ContainsKey("paramShowMPM"))
-        {
-            <script>var paramShowMPM = @(ViewBag.paramShowMPM ? "true" : "false");</script>
-        }
-        if (ViewData.ContainsKey("paramShowBPM"))
-        {
-            <script>var paramShowBPM = @(ViewBag.paramShowBPM ? "true" : "false");</script>
-        }
-    }
-    
-    @Scripts.Render("~/bundles/jqueryval")
-    
-    <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
-    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+        @ScriptHelper.Parameter(ViewData,"Numerator");
+        @ScriptHelper.Parameter(ViewData, "Tempo");
+        @ScriptHelper.Parameter(ViewData, "ShowMPM");
+        @ScriptHelper.Parameter(ViewData, "ShowBPM");
 
-    <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
-    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
+        @Scripts.Render("~/bundles/jqueryval")
+
+        <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
+
+        <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
+        <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+
+        <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
+        <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
+    }
+
 }
 
