--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -82,6 +82,10 @@
             <div class="col-md-8 col-md-offset-2">
                 <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
                 <div>@Html.Partial("_MeterChooser")</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
                 <div id="dances" class="list-group"></div>
             </div>
         </div>
