--- a/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
+++ b/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
@@ -1,7 +1,15 @@
-﻿@model m4d.ViewModels.SetPasswordViewModel
+﻿@using Microsoft.AspNet.Identity
+@model m4d.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
+
+<ol class="breadcrumb">
+    <li><a href="/">Music4Dance</a></li>
+    <li><a href="/manage/index">@User.Identity.GetUserName()</a></li>
+    <li><a href="/manage/Settings">Account Settings</a></li>
+    <li class="active">Set Password</li>
+</ol>
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
@@ -34,6 +42,7 @@
         </div>
     </div>
 }
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
