--- a/DanceCalc/m4d/Views/Manage/ChangePassword.cshtml
+++ b/DanceCalc/m4d/Views/Manage/ChangePassword.cshtml
@@ -1,7 +1,14 @@
-﻿@model m4d.ViewModels.ChangePasswordViewModel
+﻿@using Microsoft.AspNet.Identity
+@model m4d.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
+<ol class="breadcrumb">
+    <li><a href="/">Music4Dance</a></li>
+    <li><a href="/manage/index">@User.Identity.GetUserName()</a></li>
+    <li><a href="/manage/Settings">Account Settings</a></li>
+    <li class="active">Change Password</li>
+</ol>
 
 <h2>@ViewBag.Title.</h2>
 
@@ -35,6 +42,7 @@
         </div>
     </div>
 }
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
