--- a/DanceCalc/m4d/Views/Manage/Index.cshtml
+++ b/DanceCalc/m4d/Views/Manage/Index.cshtml
@@ -3,94 +3,26 @@
 @{
     ViewBag.Title = "Manage";
 }
+<ol class="breadcrumb">
+    <li><a href="/">Music4Dance</a></li>
+    <li class="active">@User.Identity.GetUserName()</li>
+</ol>
 
 <h3>Welcome @Model.Name</h3>
-<p>You have been a member of the music4dance community since @Model.MemberSince.ToString("d")</p>
-<p class="text-success">@ViewBag.StatusMessage</p>
-
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
-        <dd>
-            [
-            @(Model.HasPassword ? Html.ActionLink("Change your password", "ChangePassword") : Html.ActionLink("Create", "SetPassword"))
-            ]
-        </dd>
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*  
-            <dt>Phone Number:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None") [
-                @if (Model.PhoneNumber != null)
-                {
-                    @Html.ActionLink("Change", "AddPhoneNumber")
-                    @: &nbsp;|&nbsp;
-                    @Html.ActionLink("Remove", "RemovePhoneNumber")
-                }
-                else
-                {
-                    @Html.ActionLink("Add", "AddPhoneNumber")
-                }
-                ]
-            </dd>
-        *@
-        @*<dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @if (Model.TwoFactor)
-                {
-
-                    <form method="post" action="/Manage/DisableTwoFactorAuthentication">
-                        Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                    </form>
-                }
-                else
-                {
-
-                    <form method="post" action="/Manage/EnableTwoFactorAuthentication">
-                        Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                    </form>
-                }
-        </dd>*@
-    </dl>
 
     <hr/>
     <div>
-        <h4>Your Profile Preferences [@Html.ActionLink("Edit","EditProfile")]</h4>
-        <dl class="dl-horizontal">
-            <dt>Region:</dt>
-            <dd>@Model.Region</dd>
-            <dt>Privacy:</dt>
-            <dd>@Model.Privacy</dd>
-            <dt>Contact Preferences:</dt>
-            <dd>@string.Join(", ",@Model.CanContact)</dd>
-            <dt>Music Streaming<br/>and Purchase service<br/>preferences:</dt>
-            <dd>@string.Join(", ", @Model.ServicePreference)</dd>
-        </dl>
+        <h4>@Html.ActionLink("My Profile","UserProfile")</h4>
     </div>
-
     <hr/>
     <div>
-        <h4>View your music4dance</h4>
-        <p>@Html.ActionLink("Show songs that you have tagged", "FilterUser", "Song", new {user = @User.Identity.GetUserName()}, null)</p>
+        <h4>@Html.ActionLink("Account Settings", "Settings")</h4>
     </div>
-</div>
+    <hr/>
+    <div>
+        <h4>@Html.ActionLink("My Songs", "FilterUser", "Song", new { user = @User.Identity.GetUserName() }, null)</h4>
+    </div>
+    <hr/>
+    <div>
+        <h4><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></h4>
+    </div>
