--- a/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,18 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> @User.Identity.GetUserName() <img src="~/Content/swing-ui.png" alt="User Icon" height="30" width="30" />
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>@Html.ActionLink("My Profile", "UserProfile", "Manage")</li>
+                    <li>@Html.ActionLink("Account Settings", "Settings", "Manage")</li>
+                    <li>@Html.ActionLink("My Songs", "FilterUser", "Song", new { user = @User.Identity.GetUserName() }, null)</li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                </ul>
             </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-        </ul>
+          </ul>
     }
 }
 else
