Updates based on Foxtrot Blog Post

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -133,7 +133,7 @@
         <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Use our tempo counter tool to find the tempo of a song and match it to dance styles.</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/counter") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tempo-counter/") @SmartLink.Posts("https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/")</dd>
         <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24" />Explore relationships between the meter and tempi of different dance styles and find songs that match.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/tempi") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tempi/") @SmartLink.Posts("https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/")</dd>
     </dl>
     <p class="neutral">
         We have more useful tools for dancers coming soon. <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
@@ -169,4 +169,6 @@
     <p class="neutral">There are a bunch of different reasons that you might want to build lists of songs that are more sophisticated than just the songs that can be danced to a specific style... <a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">[Read more]</a></p>
     <h4 class="blog">Let's tag some songs</h4>
     <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/lets-tag-some-songs/">[Read more]</a></p>
+    <h4 class="blog">I am learning the Foxtrot, where can I find some music?</h4>
+    <p class="neutral">The quick answer is to just <a href="https://www.music4dance.net/song/search?dances=FXT">click this link</a> where you will find a list of over a thousand songs... <a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">[Read more]</a></p>
 </div>
