Initial pass at refactoring the tag editor to transform it into a tag chooser that can be used both from the song editor and advanced search (and perhaps elsewhere).
I pulled out tagChooser into it's own module and rewired to allow for multiple current states (for search we'll want include/exclude rather than just add) as well as a few cosmetic changes.

Need to enable the multiple current states & then see if it actually works for the search control.

Checking this in now because it appears not to regress current functionality and is a clear improvement over the old code wrt factorization.

--- a/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_TagEditor.cshtml
@@ -1,5 +1,4 @@
-﻿@using m4d.APIControllers
-@helper Suggestions(string type, string header)
+﻿@helper Suggestions(string type, string header)
 {
     <div id="@type-suggestions" data-bind="with: $root.tagSuggestions().current()">
         <hr data-bind="css: $root.tagSuggestions().current().hrClass" />
@@ -37,7 +36,7 @@
                      <div class="row">
                          <div class="col-md-12">
                              <b>Tags: </b>
-                             <select id="chosen" class="chosen" multiple="true" data-bind="options: tagSuggestions().current().all, optionsText: 'value', selectedOptions: tagSuggestions().current().chosen, chosen: true"></select>
+                             <select id="chosen" class="chosen" multiple data-bind="options: tagSuggestions().current().all, optionsText: 'value', selectedOptions: tagSuggestions().current().chosen, chosen: true"></select>
                          </div>
                     </div>
                     @Suggestions("user", "Tags that you've used:")
@@ -45,8 +44,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn btn-default" href="https://www.music4dance.net/blog/music4dance-help/tag-editing/" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
-                <button id="addTagsOkay" type="button" class="btn btn-default" data-dismiss="modal">Save</button>
+                <a class="btn btn-default" data-bind="attr: {href:'https://www.music4dance.net/blog/music4dance-help/' + tagSuggestions().help() + '/'}" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                <button id="addTagsOkay" type="button" class="btn btn-default" data-dismiss="modal" data-bind="text:tagSuggestions().current().title"></button>
             </div>
         </div>
     </div>
