--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -58,6 +58,7 @@
 
 @section Scripts {
     @{
+        string tagChooserScript = "~/Scripts/tagchooser.js" + Page.ScriptQualifier;
         string pageScript = "~/Scripts/edit.js" + Page.ScriptQualifier;
         string counterScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
     }
@@ -68,6 +69,7 @@
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
     <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
     <script src="@Url.Content(counterScript)" type="text/javascript"></script>
+    <script src="@Url.Content(tagChooserScript)" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
     <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
