First pass at refactoring tag control to make it useable by advanced search.  This is a reasonable rerfactoring so I'm checking it in now but I won't count this as done until I've actually used it in search.

--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -23,6 +23,7 @@
         region = "US";
     }
 }
+@Html.Partial("ItemTags")
 
 <div class="row">
     <div class="col-md-12">
@@ -79,7 +80,7 @@
     <div class="row">
         <div class="col-md-12">
             <h4>
-                @Html.Partial("ItemTags")
+                <span data-bind="template: {name:'tag-template',foreach:song.TagSummary.tagTypes}"></span>
             </h4>
         </div>
     </div>
