--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -31,7 +31,7 @@
     {
         <li><a href="/dances/@Model.Parent.SeoName">@Model.Parent.DanceName</a></li>
     }
-    <li><a href="/dances/@Model.SeoName">@Model.DanceName</a></li>
+    <li class="active">@Model.DanceName</li>
 </ol>
 
 <h2>@Model.DanceName</h2>
