--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -16,7 +16,7 @@
 
 <ol class="breadcrumb">
     <li><a href="/">Music4Dance</a></li>
-    <li><a href="/dances">Dances</a></li>
+    <li class="active">Dances</li>
 </ol>
 
 
